RESOLVED FIXED274676
Xcode is not able to attach to WebContent Development variant
https://bugs.webkit.org/show_bug.cgi?id=274676
Summary Xcode is not able to attach to WebContent Development variant
Per Arne Vollan
Reported 2024-05-24 12:24:55 PDT
Restricted entitlement should not be added to WebContent Development variant.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-24 12:25:08 PDT
Per Arne Vollan
Comment 2 2024-05-24 12:26:44 PDT
EWS
Comment 3 2024-05-28 16:57:04 PDT
Committed 279416@main (c663098fb4c1): <https://commits.webkit.org/279416@main> Reviewed commits have been landed. Closing PR #29077 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.