Xcode is not able to attach to WebContent Development variant https://bugs.webkit.org/show_bug.cgi?id=274676 rdar://128695932

Reviewed by Chris Dumez.

Restricted entitlement should not be added to WebContent Development variant. Xcode will not be
able to attach to the Development version if there are restricted entitlements added to it.

* Source/WebKit/Scripts/process-entitlements.sh:
* Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::registerNotificationObservers):

Canonical link: https://commits.webkit.org/279416@main